--- a/ML_lab1.ipynb
+++ b/ML_lab1.ipynb
@@ -72,7 +72,7 @@
    "outputs": [],
    "source": [
     "#loc = (\"C:\\Users\\Nisharg\\Desktop\\Labs\\ML_LabsDA-master\\data for Problem1.xlsx\") \n",
-    "df = pd.read_excel ('\\data for Problem1.xlsx')\n",
+    "df = pd.read_excel ('data for Problem1.xlsx')\n",
     "\n",
     "y=df.y\n",
     "x=(df.x-df.x.mean())/df.x.std()\n",
